{
    "name": "PlayerControlls",
    "maps": [
        {
            "name": "Charactor",
            "id": "ab765d79-9815-49e2-98d7-021c1664355c",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "82ebf166-c9ec-4c1b-8a86-bde52108de1f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0c2588ed-6a2b-4580-b759-e6683ff62704",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "a4557ab8-6f1c-4444-b25c-8ba27787a90d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4fedd3be-7418-4eb0-bd18-b7a180b7f255",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "92f7e1d3-0d35-4580-9c1b-4d63fd64ab50",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dd7765b7-e2ed-4ba7-9d05-dd0e342982b7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "237496f7-e671-4e87-9a44-d0124c97ea9d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5f71700c-a628-4807-b530-bb8b0f21bf8d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bc4e3e0b-b18b-4150-85fc-eb5691d45a81",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6dfc994f-953b-47e3-9255-427685f9acd3",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}